# cdx

./: .project  README.md  build-all-deb-packages.sh  index.html
CPP/: AUTHORS  ChangeLog  Makefile.am  NEWS  README  configure.ac
CPP/cdx/: File.cpp  File.h  ReadContinuousDelayFile.cpp  ReadDiscreteDelayFile.cpp  ReadFile.cpp  ReadFile.h  WriteContinuousDelayFile.cpp  WriteContinuousDelayFile.h  WriteDiscreteDelayFile.cpp  WriteFile.cpp  WriteFile.h
CPP/debian/: changelog  control  libcdx-dev.install  libcdx0.install  rules
CPP/src/: File.cpp  File.h  ReadContinuousDelayFile.cpp  ReadContinuousDelayFile.h  ReadDiscreteDelayFile.cpp  ReadDiscreteDelayFile.h  ReadFile.cpp  ReadFile.h  WriteContinuousDelayFile.cpp  WriteContinuousDelayFile.h  WriteDiscreteDelayFile.cpp  WriteDiscreteDelayFile.h  WriteFile.cpp  WriteFile.h
CPP/tests/cdx-test-write-read-continuous-delay-cdx-file/: cdx-test-write-read-continuous-delay-cdx-file.cpp
docs/: File_8cpp.html  File_8cpp__incl.map  File_8cpp__incl.md5  File_8h.html  File_8h__dep__incl.map  File_8h__dep__incl.md5  File_8h__incl.map  File_8h__incl.md5  File_8h_source.html  ReadContinuousDelayFile_8h.html  ReadContinuousDelayFile_8h__incl.map  ReadContinuousDelayFile_8h__incl.md5  ReadContinuousDelayFile_8h_source.html  ReadDiscreteDelayFile_8h.html  ReadDiscreteDelayFile_8h__incl.map  ReadDiscreteDelayFile_8h__incl.md5  ReadDiscreteDelayFile_8h_source.html  ReadFile_8cpp.html  ReadFile_8cpp__incl.map  ReadFile_8cpp__incl.md5  ReadFile_8h.html  ReadFile_8h__dep__incl.map  ReadFile_8h__dep__incl.md5  ReadFile_8h__incl.map  ReadFile_8h__incl.md5  ReadFile_8h_source.html  WriteContinuousDelayFile_8cpp.html  WriteContinuousDelayFile_8cpp__incl.map  WriteContinuousDelayFile_8cpp__incl.md5  WriteContinuousDelayFile_8h.html  WriteContinuousDelayFile_8h__dep__incl.map  WriteContinuousDelayFile_8h__dep__incl.md5  WriteContinuousDelayFile_8h__incl.map  WriteContinuousDelayFile_8h__incl.md5  WriteContinuousDelayFile_8h_source.html  WriteDiscreteDelayFile_8cpp.html  WriteDiscreteDelayFile_8cpp__incl.map  WriteDiscreteDelayFile_8cpp__incl.md5  WriteDiscreteDelayFile_8h.html  WriteDiscreteDelayFile_8h__dep__incl.map  (+110 more)
docs/search/: all_1.js  all_2.js  all_3.js  all_4.js  all_6.js  all_9.js  all_c.js  classes_4.js  classes_5.js  files_0.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_7.js  search.js  typedefs_0.js  variables_0.js  variables_1.js  variables_4.js  variables_5.js
documentation/: Doxyfile
documentation/doxygen-pages/: 000_mainpage.dox  200_storage-data-conventions.dox  300_cdx-format.dox  900_development.dox  900_development.dox~  950_distribution.dox
documentation/html/: CDXReadFile_8m.html  CDXWriteFile_8m.html  FiguresGenerator_8py.html  File_8cpp.html  File_8cpp__incl.map  File_8cpp__incl.md5  File_8h.html  File_8h__dep__incl.map  File_8h__dep__incl.md5  File_8h__incl.map  File_8h__incl.md5  File_8h_source.html  ReadContinuousDelayFile_8h.html  ReadContinuousDelayFile_8h__dep__incl.map  ReadContinuousDelayFile_8h__dep__incl.md5  ReadContinuousDelayFile_8h__incl.map  ReadContinuousDelayFile_8h__incl.md5  ReadContinuousDelayFile_8h_source.html  ReadContinuousDelayFile_8py.html  ReadDiscreteDelayFile_8h.html  ReadDiscreteDelayFile_8h__incl.map  ReadDiscreteDelayFile_8h__incl.md5  ReadDiscreteDelayFile_8h_source.html  ReadFile_8cpp.html  ReadFile_8cpp__incl.map  ReadFile_8cpp__incl.md5  ReadFile_8h.html  ReadFile_8h__dep__incl.map  ReadFile_8h__dep__incl.md5  ReadFile_8h__incl.map  ReadFile_8h__incl.md5  ReadFile_8h_source.html  WriteContinuousDelayFile_8cpp.html  WriteContinuousDelayFile_8cpp__incl.map  WriteContinuousDelayFile_8cpp__incl.md5  WriteContinuousDelayFile_8h.html  WriteContinuousDelayFile_8h__dep__incl.map  WriteContinuousDelayFile_8h__dep__incl.md5  WriteContinuousDelayFile_8h__incl.map  WriteContinuousDelayFile_8h__incl.md5  (+243 more)
documentation/matlab-filter-for-doxygen/: m2cpp.pl  readme.txt
documentation/satellite-propagation/: LOS-distance-change-due-to-receiver-movement_01.asy  latex-commands.sty  rf-channel_01.asy
examples/example-01/: example-01.cdx  example-01.py
examples/write-cdx-file/: write-cdx-file.py
matlab/: README  interpolate_cirs.m  plot_continuous_delay_cir_file.m  plot_discrete_delay_cir_file.m  plot_discrete_delay_cir_file_delay_Doppler_spectrum.m  test-discr.h5  test_write_discr.m
matlab/@CDXReadFile/: CDXReadFile.m  _get_discrete_delay_cir.m  get_continuous_delay_cir.m  get_discrete_delay_all_cirs.m  get_discrete_delay_cir.m  get_discrete_delay_cirs.m  read_string.m
matlab/@CDXWriteFile/: CDXWriteFile.m  append_continuous_delay_cir.m  append_value_to_dataset.m  (+2 more)
octave-matlab/: hdf5write.cpp
python/: LICENSE  README  setup.py
tools/: AUTHORS  Makefile.am  README  configure.ac
tools/cdx-convert-continuous-to-discrete-src/: cdx-convert-continuous-to-discrete.cpp
tools/debian/: changelog  control
tools/matlab/: E010_create_new_hdf5_file_continuous_delay.m  E020_plot_continuous_delay_cir_file.m  E030_convert_continuous_to_discrete_delay.m  E040_plot_discrete_delay_cir_file.m  convert_continuous_to_discrete_delay.m  create_new_hdf5_file_continuous_delay.m  plot_continuous_delay_cir_file.m  plot_discrete_delay_cir_file.m
tools/python/: cdx-compute-delay-doppler-spectrum  cdx-compute-multipath-spread-and-energy  cdx-compute-multipath-to-line-of-sight-components-power-ratio  cdx-compute-power-delay-profile  cdx-display  cdx-plot-cir-continuous-delay-file  cdx-plot-discrete-delay-file
(+81 files in other folders)
